# vllm-nt

./: README.md  REMOTE_VALIDATION.md  example.py  prepare_model.sh  prepare_repo.sh  pyproject.toml  run_inference_validation.sh  run_offline_throughput.sh  run_operator_benchmarks.sh
docs/: mlu_nt_tuning_and_benchmark.md  mm_hypothesis_validation.md
reports/: README.md  mm_hypothesis_benchmark_fixed.md  mm_hypothesis_benchmark_fixed_tuning.md  multi_model_eager_throughput_batch1.md  multi_model_eager_throughput_batch2.md  multi_model_eager_throughput_summary.md  nt_matmul_microbenchmark.md  nt_mlu_validation_quick_report.md  nt_mlu_validation_report.md  nt_mlu_validation_tuning_report.md  official_ninetoothed_examples_mm_mlu.md  qwen3_non_mm_ablation.md  qwen3_non_mm_ablation_after_rms_fix.md  rms_norm_variant_benchmark.md
reports/mlu/: README.md  correctness_by_model.md  mm_hypothesis_benchmark_current.md  multi_model_eager_throughput_summary.md  (+3 more)
scripts/: _model_utils.py  benchmark_rms_norm_variants.py  run_inference_validation.py  run_mm_hypothesis_benchmarks.py  run_multi_model_eager_throughput.py  run_nt_matmul_microbenchmark.py  run_nt_mlu_suite.py  run_official_ninetoothed_mm_benchmark.py  run_offline_throughput.py  run_operator_benchmarks.py  run_qwen3_non_mm_ablation.py  validate_remote_runtime.py
tests/: test_attention.py  test_backend_router.py  test_kv_cache.py  test_nt_torch_utils.py  test_oot.py  test_package_metadata.py  test_plugin_integration.py  test_rope.py  test_run_inference_validation.py  test_sdpa.py
vllm_nt/: __init__.py  oot.py
(+39 files in other folders)
